fix modal responsiveness on small mobile change logo img site

--- a/styles.css
+++ b/styles.css
@@ -398,7 +398,7 @@ img#qr-code {
 /***********************Media Queries*************************/
 @media (max-height: 699px) {
     /* Styles for devices with a height less than 700px */
-    /* .modal-content {
+    /* .modal-content .card {
         transform: scale(.8);
     } */
 
@@ -429,9 +429,9 @@ img#qr-code {
 }
 
 @media (min-width: 601px) {
-    .modal-content .card {
+    /* .modal-content .card {
         transform: scale(1.3);
-    }
+    } */
 }
 
 @media screen and (max-width: 600px) {
